Small alignment fix for pages content.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -157,6 +157,7 @@ aside {
 
 .pageContent {
 	display: inline-block;
+	text-align: left;
 }
 
 .pageContainer {
